--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,1 +1,274 @@
-hello
+<!DOCTYPE html>
+<html>
+<head>
+
+    <title>Doc Scanner</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+          crossorigin="anonymous">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <!--  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+          crossorigin="anonymous">
+
+    <style>
+    h1{
+	color: #757575;
+	font-size: 45px;
+	}
+    h2{
+	color: #757575;
+	font-size: 33px;
+	}
+	h3{
+	color: #757575;
+	font-size: 26px;
+	}
+	a{
+	color: white;
+	font-size: 23px;
+	}
+     p{
+	 color: #757575;
+	 font-size: 18px;
+	 }
+	 b{
+	 color: #ff9917;
+	 font-size: 16px;
+	 }
+	 body{
+	 font-family: 'Roboto';
+	 }
+	 .panel-heading {
+	  transition: all .5s;
+      background-color: #607d8b !important;
+	 }
+
+    </style>
+
+</head>
+<body>
+
+<div style="background-color: #607d8b">
+    <div class="container">
+
+        <div class="text-left center-block">
+            <!-- <p class="txt-railway" >Smart File Manager</p>-->
+            <h3 style="color: white; padding: 12px 12px 12px 12px;">Doc Scanner</h3>
+        </div>
+    </div>
+</div>
+
+<div class="container" style="margin-top: 15px;">
+    <h1>Doc Scanner privacy policy</h1>
+
+    <p>The following information applies to Doc Scanner Android App.</p>
+
+    <h2>Data collection</h2>
+    <p>Doc Scanner collects anonymous usage data by using Google Analytics and Crashlytics. Doc
+        Scanner does not share any information or the user data provided to any third party
+        companies or services.</p>
+
+    <h3>Terms of services</h3>
+    <p>We are offering you this app to use for your own personal use without any cost, but you
+        should be aware that you are not allowed to copy/modify or redistribute the app or our
+        trademark in any way. You are not allowed to attempt to extract the source code of the app
+        for any purpose. The app itself,
+        Copyright, Trademark, Database, User details/User information and all other rights belongs
+        to CV Infotech.</p>
+
+    <h3>Required permissions</h3>
+    <p>Doc Scanner requests following permissions on your device:</p>
+
+    <div class="panel-group" id="accordion">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title" style="color:white">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"
+                       style="text-decoration:none">Internet and network</a>
+                </h4>
+            </div>
+            <div id="collapse1" class="panel-collapse collapse in">
+                <div class="panel-body">
+                    <p>
+                        <b>FULL NETWORK ACCESS</b> – required for all the application features.
+                        Revoking this permission
+                        will limit the application functionality to local use only.
+                    </p>
+                    <p>
+                        <b>GOOGLE PLAY BILLING SERVICE</b> - required for in-app purchase of Doc
+                        Scanner and its additional components.
+                    </p>
+                    <!--<p>
+                    <b>ACCESS WIFI STATE</b> - required to check the applications to access information about Wi-Fi networks.
+                    </p>-->
+
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title" style="color:white">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse2"
+                       style="text-decoration:none">Your identity</a>
+                </h4>
+            </div>
+            <div id="collapse2" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <p>
+                        <b>GET ACCOUNTS</b> – required for access to the list of accounts in the
+                        Accounts Service.
+                    </p>
+                    <!--<p>
+                    <b>MANAGE ACCOUNTS</b> - required to check the license of Solid Explorer and its additional components.
+                    </p>
+                    <p>
+                    <b>USE CREDENTIALS</b> - required to check the applications to access information about Wi-Fi networks.
+                    </p>-->
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title" style="color:white">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse3"
+                       style="text-decoration:none">Other permissions</a>
+                </h4>
+            </div>
+            <div id="collapse3" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <p>
+                        <b>CAMERA</b> – required to capture image of documents using device
+                        camera.Revoking this permission
+                        will limit the application functionality.
+                    </p>
+                    <p>
+                        <b>READ EXTERNAL STORAGE</b> - this permission is required to read images
+                        from external storage.
+                    </p>
+                    <p>
+                        <b>WRITE EXTERNAL STORAGE</b> - this permission is required to write to
+                        external storage. Revoking this permission
+                        will limit the application to not to write scanned document to external
+                        storage.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <h3>Modification and Termination of Services</h3>
+    <p>We have a policy of constantly improving our services, and for that we can modify or
+        terminate any of our services anytime.
+        We may change any function, feature or can terminate our services all together. This may
+        cause in deletion of user data.
+        Any loss or compromisation of data will not be liable to CV Infotech, users are advised to
+        keep their sensitive information
+        outside of the app. We do not promise anything about our services.</p>
+
+    <h3>About these terms</h3>
+    <p>We may modify these terms or add any additional terms that apply to a service or changes to
+        our services without any prior
+        or post notice to users. User need to check the terms at a regular interval to be updated
+        with the services and terms.
+        It if turns out that any particular term is not applicable, it wili not affect other terms.
+        The laws of New Delhi,
+        India will be applicable to any dispute arising out of our these terms or related to our
+        services. All claims arising
+        out of or related to these terms, App or Website use or services provided by CV Infotech
+        will be litigated exclusively
+        to District Court Dwarka, New Delhi, India.</p>
+
+
+    <div class="row">
+        <div class="col-md-3">
+        </div>
+
+        <div class="col-md-6">
+
+            <div class="card card-inverse" style="background-color: #37474F;">
+                <div class="card-block">
+                    <div class="row">
+
+                        <div class="col-md-5">
+                            <a href="https://play.google.com/store/apps/details?id=com.cv.docscanner&hl=en"
+                               target="_blank">
+                                <div class="logo">
+                                    <img src="http://docscanner.cvinfotech.com/images/ss/doc_icon.png"
+                                         height="150" width="150" style="margin-top: 50px;">
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-7" style="margin-top: 10px;">
+                            <h3 style="color: white;">Doc Scanner</h3>
+
+                            <span>&starf;</span>
+                            <span>&starf;</span>
+                            <span>&starf;</span>
+                            <span>&starf;</span>
+                            <span>&starf;</span>
+                            <p style="color:white; font-size: 16px;">As the very first choice for
+                                document scanning and sharing App with a magnifying speed of
+                                download towards taking a lead from other Doc Scanners on
+                                Playstore.</p>
+                            <a href="https://play.google.com/store/apps/details?id=com.cv.docscanner&hl=en"
+                               target="_blank"><img
+                                    src="http://filemanager.cvinfotech.com/img/thumbs/googleplay.png"></a>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+        </div>
+    </div>
+
+
+</div>
+<div style="background-color: #607d8b">
+    <hr>
+    <div class="container">
+        <div class="text-center center-block">
+            <p class="txt-railway" style="color: white">Copyright © 2017 Doc Scanner, Made with ❤ by
+                <a style="color: white; font-size: 16px;" href="http://www.cvinfotech.com/">CV
+                    Infotech</a></p>
+        </div>
+    </div>
+</div>
+
+
+<script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBbjsdQwYMXBaCrAamDX_0yxlgbriTO_KE",
+    authDomain: "doc-scanner-edccc.firebaseapp.com",
+    databaseURL: "https://doc-scanner-edccc.firebaseio.com",
+    projectId: "doc-scanner-edccc",
+    storageBucket: "doc-scanner-edccc.appspot.com",
+    messagingSenderId: "435847677185"
+  };
+  firebase.initializeApp(config);
+
+</script>
+
+</body>
+</html>
