--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -209,7 +209,7 @@
                             <a href="https://play.google.com/store/apps/details?id=com.cv.docscanner&hl=en"
                                target="_blank">
                                 <div class="logo">
-                                    <img src="http://docscanner.cvinfotech.com/images/ss/doc_icon.png"
+                                    <img src="https://lh3.googleusercontent.com/y9woBTOLroocv-vLD7kDdAq_gJeakr2eZEfEH9Vu8WN4vJTJsjEvlH81m-sdIIozAf0=s360-rw"
                                          height="150" width="150" style="margin-top: 50px;">
                                 </div>
                             </a>
