--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,7 +2,11 @@
 <html>
 <head>
 
+
     <title>Doc Scanner</title>
+
+    <link rel="icon"
+          href="https://lh3.googleusercontent.com/y9woBTOLroocv-vLD7kDdAq_gJeakr2eZEfEH9Vu8WN4vJTJsjEvlH81m-sdIIozAf0=s360-rw">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet"
@@ -39,8 +43,7 @@
 	font-size: 26px;
 	}
 	a{
-	color: white;
-	font-size: 23px;
+	font-size: 18px;
 	}
      p{
 	 color: #757575;
@@ -58,6 +61,31 @@
       background-color: #607d8b !important;
 	 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </style>
 
 </head>
@@ -68,133 +96,252 @@
 
         <div class="text-left center-block">
             <!-- <p class="txt-railway" >Smart File Manager</p>-->
-            <h3 style="color: white; padding: 12px 12px 12px 12px;">Doc Scanner</h3>
+            <h3 style="color: white; padding: 12px 12px 12px 12px;">Doc Scanner Privacy Policy</h3>
         </div>
     </div>
 </div>
 
 <div class="container" style="margin-top: 15px;">
-    <h1>Doc Scanner privacy policy</h1>
+    <h3 style="padding: 12px 12px 12px 0px;">The following information applies to Doc
+        Scanner(Document Scanner) app.</h3>
 
-    <p>The following information applies to Doc Scanner Android App.</p>
+    <p>Lufick built the Doc Scanner app as a Freemium app. This SERVICE is provided by Lufick and is
+        intended for use as is.
 
-    <h2>Data collection</h2>
-    <p>Doc Scanner collects anonymous usage data by using Google Analytics and Crashlytics. Doc
-        Scanner does not share any information or the user data provided to any third party
-        companies or services.</p>
+        <br>
 
-    <h3>Terms of services</h3>
-    <p>We are offering you this app to use for your own personal use without any cost, but you
-        should be aware that you are not allowed to copy/modify or redistribute the app or our
-        trademark in any way. You are not allowed to attempt to extract the source code of the app
-        for any purpose. The app itself,
-        Copyright, Trademark, Database, User details/User information and all other rights belongs
-        to CV Infotech.</p>
+        This page is used to inform visitors regarding our policies with the collection, use, and
+        disclosure of Personal Information if anyone decided to use our Service.
+
+        <br>
+        <br>
+
+        If you choose to use our Service, then you agree to the collection and use of information in
+        relation to this policy. The Personal Information that we collect is used for providing and
+        improving the Service. We will not use or share your information with anyone except as
+        described in this Privacy Policy.
+
+        <br>
+        <br>
+        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions,
+        which is accessible at Doc Scanner unless otherwise defined in this Privacy Policy.
+        <br>
+        <br>
+    </p>
+
+    <h3>Information Collection and Use</h3>
+
+
+    <p>When you use our Apps, we may automatically collect the following types of information to
+        implement significant features and provide you a better experience:
+    </p>
+    <p>
+        The platform type (Android)
+    </p>
+    <p>
+        The operating system version
+    </p>
+    <p>
+        The number of clicks on the app feature
+    </p>
+    <p>
+        The device model
+    </p>
+    <p>
+        The language you use for the device system
+    </p>
+    <p>
+        The manufacturer of the device
+    </p>
+    <p>
+        The time of your phone
+    </p>
+    <p>
+        The screen resolution
+    </p>
+    <p>
+        The device hardware configuration
+    </p>
+    <p>
+        Google Advertising ID: This is used in the third-party advertising network to provide
+        personalized ads and prevent inappropriate advertisement content.
+    </p>
+    <p>
+        Support Related Information: If you communicate with us via our support section or via
+        email, we may collect your email address, name, and any information voluntarily submitted by
+        you in connection with such support. Such information will only be used to provide you with
+        support services.
+    </p>
+
+    <br>
+
+    <p>For a better experience, while using our Service, we may require you to provide us with
+        certain personally identifiable information. The information that we request will be
+        retained by us and used as described in this privacy policy.
+    </p>
+
+    <br>
+    <br>
+
+    <h3>The app does use third-party services that may collect information used to identify
+        you.</h3>
+
+    <p>Links to the privacy policy of third party service providers used by the app</p>
+
+    <ul>
+        <li>
+            <a href="https://www.google.com/policies/privacy/" target="_blank"
+               rel="noopener noreferrer">Google Play Services</a>
+        </li>
+        <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank"
+               rel="noopener noreferrer">AdMob</a></li>
+        <li><a href="https://firebase.google.com/policies/analytics" target="_blank"
+               rel="noopener noreferrer">Google Analytics for Firebase</a></li>
+        <li><a href="https://firebase.google.com/support/privacy/" target="_blank"
+               rel="noopener noreferrer">Firebase Crashlytics</a></li>
+        <li><a href="https://www.facebook.com/about/privacy/update/printable" target="_blank"
+               rel="noopener noreferrer">Facebook Ads</a></li>
+        <li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Fabric</a>
+        </li>
+    </ul>
+
+
+    <br>
+    <br>
+    <h3>Log Data</h3>
+    <p>
+        We want to inform you that whenever you use our Service, in a case of an error in the app we
+        collect data and information (through third party products) on your phone called Log Data.
+        This Log Data may include information such as your device Internet Protocol (“IP”) address,
+        device name, operating system version, the configuration of the app when utilizing our
+        Service, the time and date of your use of the Service, and other statistics.
+    </p>
+
+    <br>
+    <br>
+
+    <h3>Cookies</h3>
+
+    <p>Cookies are files with a small amount of data that are commonly used as anonymous unique
+        identifiers. These are sent to your browser from the websites that you visit and are stored
+        on
+        your device's internal memory.</p>
+
+    <p>
+        This Service does not use these “cookies” explicitly. However, the app may use third party
+        code
+        and libraries that use “cookies” to collect information and improve their services. You have
+        the
+        option to either accept or refuse these cookies and know when a cookie is being sent to your
+        device. If you choose to refuse our cookies, you may not be able to use some portions of
+        this
+        Service.
+    </p>
+
+    <br>
+    <br>
+    <h3>Service Providers</h3>
+
+    <p>We may employ third-party companies and individuals due to the following reasons:</p>
+
+    <p>To facilitate our Service;</p>
+    <p>To provide the Service on our behalf;</p>
+    <p>To perform Service-related services; or</p>
+    <p>To assist us in analyzing how our Service is used.</p>
+    <p>We want to inform users of this Service that these third parties have access to your Personal
+        Information. The reason is to perform the tasks assigned to them on our behalf. However,
+        they are obligated not to disclose or use the information for any other purpose.
+    </p>
+
+
+    <br>
+    <br>
+    <h3>Security</h3>
+    <p>We value your trust in providing us your Personal Information, thus we are striving to use
+        commercially acceptable means of protecting it. But remember that no method of transmission
+        over the internet, or method of electronic storage is 100% secure and reliable, and we
+        cannot guarantee its absolute security.
+    </p>
+
+    <br>
+    <br>
 
     <h3>Required permissions</h3>
-    <p>Doc Scanner requests following permissions on your device:</p>
 
-    <div class="panel-group" id="accordion">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title" style="color:white">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"
-                       style="text-decoration:none">Internet and network</a>
-                </h4>
-            </div>
-            <div id="collapse1" class="panel-collapse collapse in">
-                <div class="panel-body">
-                    <p>
-                        <b>FULL NETWORK ACCESS</b> – required for all the application features.
-                        Revoking this permission
-                        will limit the application functionality to local use only.
-                    </p>
-                    <p>
-                        <b>GOOGLE PLAY BILLING SERVICE</b> - required for in-app purchase of Doc
-                        Scanner and its additional components.
-                    </p>
-                    <!--<p>
-                    <b>ACCESS WIFI STATE</b> - required to check the applications to access information about Wi-Fi networks.
-                    </p>-->
+    <p>Document Scanner requests the following permissions on your device:</p>
 
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title" style="color:white">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse2"
-                       style="text-decoration:none">Your identity</a>
-                </h4>
-            </div>
-            <div id="collapse2" class="panel-collapse collapse">
-                <div class="panel-body">
-                    <p>
-                        <b>GET ACCOUNTS</b> – required for access to the list of accounts in the
-                        Accounts Service.
-                    </p>
-                    <!--<p>
-                    <b>MANAGE ACCOUNTS</b> - required to check the license of Solid Explorer and its additional components.
-                    </p>
-                    <p>
-                    <b>USE CREDENTIALS</b> - required to check the applications to access information about Wi-Fi networks.
-                    </p>-->
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title" style="color:white">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse3"
-                       style="text-decoration:none">Other permissions</a>
-                </h4>
-            </div>
-            <div id="collapse3" class="panel-collapse collapse">
-                <div class="panel-body">
-                    <p>
-                        <b>CAMERA</b> – required to capture image of documents using device
-                        camera.Revoking this permission
-                        will limit the application functionality.
-                    </p>
-                    <p>
-                        <b>READ EXTERNAL STORAGE</b> - this permission is required to read images
-                        from external storage.
-                    </p>
-                    <p>
-                        <b>WRITE EXTERNAL STORAGE</b> - this permission is required to write to
-                        external storage. Revoking this permission
-                        will limit the application to not to write scanned document to external
-                        storage.
-                    </p>
-                </div>
-            </div>
-        </div>
+    <p><b>FULL NETWORK ACCESS</b> – required for all the application features. Revoking this
+        permission will
+        limit the application functionality to local use only.</p>
 
-    </div>
+    <p><b>GOOGLE PLAY BILLING SERVICE</b> - required for an in-app purchase of Document Scanner and
+        its
+        additional components.</p>
 
+    <p><b>CAMERA</b> – required to capture images of documents using the device camera. Revoking
+        this
+        permission will limit the application functionality.</p>
+
+    <p><b>READ EXTERNAL STORAGE</b> - this permission is required to read images from external
+        storage.</p>
+
+    <p><b>WRITE EXTERNAL STORAGE</b> - this permission is required to write to external storage.
+        Revoking this
+        permission will limit the application to not to write scanned document to external storage.
+    </p>
+
+    <p><b>FOREGROUND_SERVICE</b> - this permission is required to upload documents on cloud storage
+        and also
+        to show ongoing notifications.</p>
+
+
+    <br>
+    <br>
+    <h3>Links to Other Sites</h3>
+
+    <p>This Service may contain links to other sites. If you click on a third-party link, you will
+        be directed to that site. Note that these external sites are not operated by us. Therefore,
+        we strongly advise you to review the Privacy Policy of these websites. We have no control
+        over and assume no responsibility for the content, privacy policies, or practices of any
+        third-party sites or services.
+    </p>
+
+    <br>
+    <br>
+    <h3>Children’s Privacy</h3>
+
+    <p>These Services do not address anyone under the age of 13. We do not knowingly collect
+        personally identifiable information from children under 13.
+    </p>
+
+
+    <br>
+    <br>
     <h3>Modification and Termination of Services</h3>
-    <p>We have a policy of constantly improving our services, and for that we can modify or
-        terminate any of our services anytime.
-        We may change any function, feature or can terminate our services all together. This may
-        cause in deletion of user data.
-        Any loss or compromisation of data will not be liable to CV Infotech, users are advised to
-        keep their sensitive information
-        outside of the app. We do not promise anything about our services.</p>
 
+    <p>We have a policy of constantly improving our services, and for that, we can modify or
+        terminate any of our services anytime. We may change any function, feature, or can terminate
+        our services altogether. This may cause the deletion of user data. Any loss or
+        compromisation of data will not be liable to Lufick, users are advised to keep their
+        sensitive information outside of the app. We do not promise anything about our services.
+
+    </p>
+
+    <br>
+    <br>
     <h3>About these terms</h3>
+
     <p>We may modify these terms or add any additional terms that apply to a service or changes to
-        our services without any prior
-        or post notice to users. User need to check the terms at a regular interval to be updated
-        with the services and terms.
-        It if turns out that any particular term is not applicable, it wili not affect other terms.
-        The laws of New Delhi,
-        India will be applicable to any dispute arising out of our these terms or related to our
-        services. All claims arising
-        out of or related to these terms, App or Website use or services provided by CV Infotech
-        will be litigated exclusively
-        to District Court Dwarka, New Delhi, India.</p>
-
-
+        our services without any prior or post notice to users. Users need to check the terms at a
+        regular interval to be updated with the services and terms. It if turns out that any
+        particular term is not applicable, it will not affect other terms. The laws of New Delhi,
+        India will be applicable to any dispute arising out of these terms or related to our
+        services. All claims arising out of or related to these terms, App or Website use or
+        services provided by Lufick will be litigated exclusively to District Court Dwarka, New
+        Delhi, India.
+    </p>
+    <br>
+    <br>
     <div class="row">
         <div class="col-md-3">
         </div>
@@ -243,13 +390,14 @@
 
 
 </div>
+
 <div style="background-color: #607d8b">
     <hr>
     <div class="container">
         <div class="text-center center-block">
-            <p class="txt-railway" style="color: white">Copyright © 2017 Doc Scanner, Made with ❤ by
-                <a style="color: white; font-size: 16px;" href="http://www.cvinfotech.com/">CV
-                    Infotech</a></p>
+            <p class="txt-railway" style="color: white">Copyright © 2020 Doc Scanner, Made with ❤ by
+                <a style="color: white; font-size: 16px;" href="http://www.lufick.com/">Lufick</a>
+            </p>
         </div>
     </div>
 </div>
@@ -267,6 +415,31 @@
     messagingSenderId: "435847677185"
   };
   firebase.initializeApp(config);
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </script>
 
