--- a/ios-privacy-policy.html
+++ b/ios-privacy-policy.html
@@ -189,10 +189,6 @@
     <p>Links to the privacy policy of third party service providers used by the app</p>
 
     <ul>
-        <li>
-            <a href="https://www.google.com/policies/privacy/" target="_blank"
-               rel="noopener noreferrer">Google Play Services</a>
-        </li>
         <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank"
                rel="noopener noreferrer">AdMob</a></li>
         <li><a href="https://firebase.google.com/policies/analytics" target="_blank"
@@ -288,25 +284,12 @@
         permission will
         limit the application functionality to local use only.</p>
 
-    <p><b>GOOGLE PLAY BILLING SERVICE</b> - required for an in-app purchase of Document Scanner and
-        its
-        additional components.</p>
-
     <p><b>CAMERA</b> – required to capture images of documents using the device camera. Revoking
         this
         permission will limit the application functionality.</p>
 
-    <p><b>READ EXTERNAL STORAGE</b> - this permission is required to read images from external
+    <p><b>READ PHOTO LIBRARY</b> - this permission is required to read images from external
         storage.</p>
-
-    <p><b>WRITE EXTERNAL STORAGE</b> - this permission is required to write to external storage.
-        Revoking this
-        permission will limit the application to not to write scanned document to external storage.
-    </p>
-
-    <p><b>FOREGROUND_SERVICE</b> - this permission is required to upload documents on cloud storage
-        and also
-        to show ongoing notifications.</p>
 
 
     <br>
@@ -356,60 +339,22 @@
     </p>
     <br>
     <br>
-    <div class="row">
-        <div class="col-md-3">
-        </div>
+	
+	<p>This policy is effective as of 2021-03-31</p>
+	<br>
+    <br>
 
-        <div class="col-md-6">
-
-            <div class="card card-inverse" style="background-color: #37474F;">
-                <div class="card-block">
-                    <div class="row">
-
-                        <div class="col-md-5">
-                            <a href="https://play.google.com/store/apps/details?id=com.cv.docscanner&hl=en"
-                               target="_blank">
-                                <div class="logo">
-                                    <img src="https://lh3.googleusercontent.com/y9woBTOLroocv-vLD7kDdAq_gJeakr2eZEfEH9Vu8WN4vJTJsjEvlH81m-sdIIozAf0=s360-rw"
-                                         height="150" width="150" style="margin-top: 50px;">
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-7" style="margin-top: 10px;">
-                            <h3 style="color: white;">Doc Scanner</h3>
-
-                            <span>&starf;</span>
-                            <span>&starf;</span>
-                            <span>&starf;</span>
-                            <span>&starf;</span>
-                            <span>&starf;</span>
-                            <p style="color:white; font-size: 16px;">As the very first choice for
-                                document scanning and sharing App with a magnifying speed of
-                                download towards taking a lead from other Doc Scanners on
-                                Playstore.</p>
-                            <a href="https://play.google.com/store/apps/details?id=com.cv.docscanner&hl=en"
-                               target="_blank"><img
-                                    src="http://filemanager.cvinfotech.com/img/thumbs/googleplay.png"></a>
-
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-3">
-        </div>
-    </div>
-
-
-</div>
+	<h3>Contact Us</h3>
+<p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at support@lufick.com.</p>
+	
+<br>
+<br>
 
 <div style="background-color: #607d8b">
     <hr>
     <div class="container">
         <div class="text-center center-block">
-            <p class="txt-railway" style="color: white">Copyright © 2020 Doc Scanner, Made with ❤ by
+            <p class="txt-railway" style="color: white">Copyright © 2021 Doc Scanner, Made with ❤ by
                 <a style="color: white; font-size: 16px;" href="http://www.lufick.com/">Lufick</a>
             </p>
         </div>
