Subscription terms added.

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -86,17 +86,18 @@
 
 
 
+
     </style>
 
 </head>
 <body>
 
-<div style="background-color: #607d8b">
+<div style="background-color: #162b35">
     <div class="container">
 
         <div class="text-left center-block">
             <!-- <p class="txt-railway" >Smart File Manager</p>-->
-            <h3 style="color: white; padding: 12px 12px 12px 12px;">Doc Scanner Privacy Policy</h3>
+            <h3 style="color: white; padding: 12px 12px 12px 12px;">Doc Scanner Privacy Policy and Terms</h3>
         </div>
     </div>
 </div>
@@ -315,6 +316,54 @@
     </p>
 
 
+
+
+
+    <br>
+    <br>
+    <h3>Maintenance and Support</h3>
+    <p>
+    Document Scanner is subject to continuous development and we reserve the right, at its sole discretion, to update, change, modify or remove features of the Document Scanner with prior notice to you. You acknowledge that Provider has no obligation to maintain or update this app.
+    We do not guarantee an uninterrupted provision of the services. Document Scanner and its services may be temporarily unavailable due to maintenance, certain technical difficulties, or other events that are beyond our control.
+    </p>
+
+    <br>
+    <br>
+    <h3>Premium subscription and Prices</h3>
+    <p>
+    Document Scanner is a freemium app which both provides basic features at free of cost and premium features with a subscription or prepaid plans.
+    You can unlock premium or paid features by buying plans as per your need or choice.
+
+    Subscriptions are concluded for the term specified in your order. You can choose between 3 months, 12 months, and lifetime plans.
+    Prices are displayed in your local currency (if supported) and always include the applicable VAT (Value Added Tax) by the Play Store.
+
+    We do not guarantee that the features of Document Scanner will always be free and reserves the right, at its sole discretion, to change the pricing.
+    Downloading or using Document Scanner may incur additional costs for the internet connection according to the standard rates of your ISP. You shall bear all such costs.
+    </p>
+
+    <br>
+    <br>
+    <h3>Payments and Refunds</h3>
+    <p>
+    If you purchase a subscription, it will automatically renew itself for another term of the same length, until you cancel it before the current term runs out. The subscription price is charged on the first day of the new term. You can cancel your subscription at any time. The cancellation will take effect the day after the last day of the term of the current subscription.
+    </p>
+    <br>
+    <br>
+    <h3>Refunds</h3>
+    <p>
+    We generally do not provide refunds for in-app purchases. It is in our discretion to provide refunds.
+    </p>
+
+    <br>
+    <br>
+    <h3>Trials</h3>
+    <p>
+    We may offer subscriptions with a specified trial period without payment. However, you are required to provide your payment details to start such a subscription. The subscription plan with your selected term will begin automatically after the expiry of the trial period until you cancel it before the period runs out. The first payment for the subscription will process on the first day following the end of the trial period. By starting the subscription with a trial period and providing your payment details you agree with possible future charges for the subscription.
+
+    Subscription will be a recurring payment that will be charged after every three or 12 months(depending on your subscription) until you cancel it.
+    </p>
+
+
     <br>
     <br>
     <h3>Modification and Termination of Services</h3>
@@ -340,6 +389,13 @@
         services provided by Lufick will be litigated exclusively to District Court Dwarka, New
         Delhi, India.
     </p>
+    <br>
+    <br>
+    <h3>Contact Us</h3>
+    <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at support@lufick.com.</p>
+
+
+
     <br>
     <br>
     <div class="row">
@@ -373,9 +429,6 @@
                                 document scanning and sharing App with a magnifying speed of
                                 download towards taking a lead from other Doc Scanners on
                                 Playstore.</p>
-                            <a href="https://play.google.com/store/apps/details?id=com.cv.docscanner&hl=en"
-                               target="_blank"><img
-                                    src="http://filemanager.cvinfotech.com/img/thumbs/googleplay.png"></a>
 
                         </div>
                     </div>
@@ -391,11 +444,11 @@
 
 </div>
 
-<div style="background-color: #607d8b">
+<div style="background-color: #162b35">
     <hr>
     <div class="container">
         <div class="text-center center-block">
-            <p class="txt-railway" style="color: white">Copyright © 2020 Doc Scanner, Made with ❤ by
+            <p class="txt-railway" style="color: white">Copyright © 2021 Doc Scanner, Made with ❤ by
                 <a style="color: white; font-size: 16px;" href="http://www.lufick.com/">Lufick</a>
             </p>
         </div>
@@ -415,6 +468,7 @@
     messagingSenderId: "435847677185"
   };
   firebase.initializeApp(config);
+
 
 
 
