--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -97,7 +97,7 @@
 
         <div class="text-left center-block">
             <!-- <p class="txt-railway" >Smart File Manager</p>-->
-            <h3 style="color: white; padding: 12px 12px 12px 12px;">Doc Scanner Privacy Policy and Terms</h3>
+            <h3 style="color: white; padding: 12px 12px 12px 12px;">Privacy Policy and Terms</h3>
         </div>
     </div>
 </div>
@@ -360,7 +360,7 @@
     <p>
     We may offer subscriptions with a specified trial period without payment. However, you are required to provide your payment details to start such a subscription. The subscription plan with your selected term will begin automatically after the expiry of the trial period until you cancel it before the period runs out. The first payment for the subscription will process on the first day following the end of the trial period. By starting the subscription with a trial period and providing your payment details you agree with possible future charges for the subscription.
 
-    Subscription will be a recurring payment that will be charged after every three or 12 months(depending on your subscription) until you cancel it.
+    Subscription will be a recurring payment that will be charged after every 3 or 12 months(depending on your subscription) until you cancel it.
     </p>
 
 
