--- a/scanify-privacy-policy.html
+++ b/scanify-privacy-policy.html
@@ -103,10 +103,9 @@
 </div>
 
 <div class="container" style="margin-top: 15px;">
-    <h3 style="padding: 12px 12px 12px 0px;">The following information applies to Doc
-        Scanner(Document Scanner) app.</h3>
+    <h3 style="padding: 12px 12px 12px 0px;">The following information applies to Scanify app.</h3>
 
-    <p>Lufick built the Doc Scanner app as a Freemium app. This SERVICE is provided by Lufick and is
+    <p>Lufick built the Scanify app as a Freemium app. This SERVICE is provided by Lufick and is
         intended for use as is.
 
         <br>
@@ -125,7 +124,7 @@
         <br>
         <br>
         The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions,
-        which is accessible at Doc Scanner unless otherwise defined in this Privacy Policy.
+        which is accessible at Scanify unless otherwise defined in this Privacy Policy.
         <br>
         <br>
     </p>
@@ -269,13 +268,13 @@
 
     <h3>Required permissions</h3>
 
-    <p>Document Scanner requests the following permissions on your device:</p>
+    <p>Scanify requests the following permissions on your device:</p>
 
     <p><b>FULL NETWORK ACCESS</b> – required for all the application features. Revoking this
         permission will
         limit the application functionality to local use only.</p>
 
-    <p><b>GOOGLE PLAY BILLING SERVICE</b> - required for an in-app purchase of Document Scanner and
+    <p><b>GOOGLE PLAY BILLING SERVICE</b> - required for an in-app purchase of Scanify and
         its
         additional components.</p>
 
@@ -323,47 +322,32 @@
     <br>
     <h3>Maintenance and Support</h3>
     <p>
-    Document Scanner is subject to continuous development and we reserve the right, at its sole discretion, to update, change, modify or remove features of the Document Scanner with prior notice to you. You acknowledge that Provider has no obligation to maintain or update this app.
-    We do not guarantee an uninterrupted provision of the services. Document Scanner and its services may be temporarily unavailable due to maintenance, certain technical difficulties, or other events that are beyond our control.
+    Scanify is subject to continuous development and we reserve the right, at its sole discretion, to update, change, modify or remove features of the Scanify with prior notice to you. You acknowledge that Provider has no obligation to maintain or update this app.
+    We do not guarantee an uninterrupted provision of the services. Scanify and its services may be temporarily unavailable due to maintenance, certain technical difficulties, or other events that are beyond our control.
     </p>
 
     <br>
     <br>
     <h3>Premium subscription and Prices</h3>
     <p>
-    Document Scanner is a freemium app which both provides basic features at free of cost and premium features with a subscription or prepaid plans.
+    Scanify is a freemium app which both provides basic features at free of cost and premium features with a subscription or prepaid plans.
     You can unlock premium or paid features by buying plans as per your need or choice.
 
-    Subscriptions are concluded for the term specified in your order. You can choose between 3 months, 12 months, and lifetime plans.
+    Subscriptions are concluded for the term specified in your order.
     Prices are displayed in your local currency (if supported) and always include the applicable VAT (Value Added Tax) by the Play Store.
 
-    We do not guarantee that the features of Document Scanner will always be free and reserves the right, at its sole discretion, to change the pricing.
-    Downloading or using Document Scanner may incur additional costs for the internet connection according to the standard rates of your ISP. You shall bear all such costs.
+    We do not guarantee that the features of Scanify will always be free and reserves the right, at its sole discretion, to change the pricing.
+    Downloading or using Scanify may incur additional costs for the internet connection according to the standard rates of your ISP. You shall bear all such costs.
     </p>
 
     <br>
     <br>
     <h3>Payments and Refunds</h3>
     <p>
-    If you purchase a subscription, it will automatically renew itself for another term of the same length, until you cancel it before the current term runs out. The subscription price is charged on the first day of the new term. You can cancel your subscription at any time. The cancellation will take effect the day after the last day of the term of the current subscription.
-    </p>
-    <br>
-    <br>
     <h3>Refunds</h3>
     <p>
     We generally do not provide refunds for in-app purchases. It is in our discretion to provide refunds.
     </p>
-
-    <br>
-    <br>
-    <h3>Trials</h3>
-    <p>
-    We may offer subscriptions with a specified trial period without payment. However, you are required to provide your payment details to start such a subscription. The subscription plan with your selected term will begin automatically after the expiry of the trial period until you cancel it before the period runs out. The first payment for the subscription will process on the first day following the end of the trial period. By starting the subscription with a trial period and providing your payment details you agree with possible future charges for the subscription.
-
-    Subscription will be a recurring payment that will be charged after every 3 or 12 months(depending on your subscription) until you cancel it.
-    </p>
-
-
     <br>
     <br>
     <h3>Modification and Termination of Services</h3>
@@ -425,10 +409,7 @@
                             <span>&starf;</span>
                             <span>&starf;</span>
                             <span>&starf;</span>
-                            <p style="color:white; font-size: 16px;">As the very first choice for
-                                document scanning and sharing App with a magnifying speed of
-                                download towards taking a lead from other Doc Scanners on
-                                Playstore.</p>
+                            <p style="color:white; font-size: 16px;">Convert and create your documents in high quality PDF files. </p>
 
                         </div>
                     </div>
@@ -448,7 +429,7 @@
     <hr>
     <div class="container">
         <div class="text-center center-block">
-            <p class="txt-railway" style="color: white">Copyright © 2021 Doc Scanner, Made with ❤ by
+            <p class="txt-railway" style="color: white">Copyright © 2021 Scanify, Made with ❤ by
                 <a style="color: white; font-size: 16px;" href="http://www.lufick.com/">Lufick</a>
             </p>
         </div>
