login privacy added.

--- a/ios-privacy-policy.html
+++ b/ios-privacy-policy.html
@@ -180,6 +180,13 @@
         retained by us and used as described in this privacy policy.
     </p>
 
+	<br>
+    	<br>
+	
+	<p>Other additional data collection if you login into Doc Scanner App -
+We access user’s name, email and profile image to show their details in the application. We do not share these info with anyone else.
+We do not share any of these above described users’ data to anyone else.
+	</p>
     <br>
     <br>
 
