sharing privacy added.

--- a/ios-privacy-policy.html
+++ b/ios-privacy-policy.html
@@ -184,8 +184,7 @@
     	<br>
 	
 	<p>Other additional data collection if you login into Doc Scanner App -
-We access user’s name, email and profile image to show their details in the application. We do not share these info with anyone else.
-We do not share any of these above described users’ data to anyone else.
+We access user’s name, email and profile image to show their details in the application. If you ask us to delete your account, we will use commercially reasonable efforts to remove your data from our servers
 	</p>
     <br>
     <br>
@@ -270,6 +269,20 @@ We do not share any of these above described users’ data to anyone else.
         they are obligated not to disclose or use the information for any other purpose.
     </p>
 
+	
+    <br>
+    <br>
+    <h3>Sharing of your information</h3>
+    <p>We will not rent or sell your information to third parties without your consent, except as noted in this Policy.</p>
+
+    <p>Parties with whom we may share your information:</p>
+
+    <p>We may share User Content and your information (including but not limited to, information from cookies, log files, device identifiers, and usage data) with businesses that are legally part of the same group of companies that Doc Scanner is part of, or that become part of that group ("Affiliates"). Affiliates may use this information to help provide, understand, and improve the Service (including by providing analytics) and Affiliates' own services (including by providing you with better and more relevant experiences). But these Affiliates will honor the choices you make about who can see your contents.
+    </p>
+    <p>We also may share your information as well as information from tools like cookies, log files, and device identifiers, with third-party organizations that help us provide the Service to you ("Service Providers"). Our Service Providers will be given access to your information as is reasonably necessary to provide the Service under reasonable confidentiality terms.
+    </p>
+    <p>We may also share aggregate or anonymous information with third parties, including advertisers. For example, we may tell our advertisers the number of users our app receives. This information does not contain any personal or personally identifiable information, and is used to develop content and services that we hope you will find of interest.
+    </p> 
 
     <br>
     <br>
