plans info added

--- a/ios-privacy-policy.html
+++ b/ios-privacy-policy.html
@@ -331,6 +331,40 @@ We access user’s name, email and profile image to show their details in the ap
         personally identifiable information from children under 13.
     </p>
 
+    <br>
+    <br>
+    <h3>Maintenance and Support</h3>
+    <p>
+    Document Scanner is subject to continuous development and we reserve the right, at its sole discretion, to update, change, modify or remove features of the Document Scanner with prior notice to you. You acknowledge that Provider has no obligation to maintain or update this app.
+    We do not guarantee an uninterrupted provision of the services. Document Scanner and its services may be temporarily unavailable due to maintenance, certain technical difficulties, or other events that are beyond our control.
+    </p>
+
+    <br>
+    <br>
+    <h3>Premium subscription and Prices</h3>
+    <p>
+    Document Scanner is a freemium app which both provides basic features at free of cost and premium features with a subscription.
+    You can unlock premium or paid features by buying plans as per your need or choice.
+
+    Subscriptions are concluded for the term specified in your order. You can choose between 3 months, 12 months plans.
+    Prices are displayed in your local currency (if supported) and always include the applicable VAT (Value Added Tax) by the App Store.
+
+    We do not guarantee that the features of Document Scanner will always be free and reserves the right, at its sole discretion, to change the pricing.
+    Downloading or using Document Scanner may incur additional costs for the internet connection according to the standard rates of your ISP. You shall bear all such costs.
+    </p>
+
+    <br>
+    <br>
+    <h3>Payments and Refunds</h3>
+    <p>
+    If you purchase a subscription, it will automatically renew itself for another term of the same length, until you cancel it before the current term runs out. The subscription price is charged on the first day of the new term. You can cancel your subscription at any time. The cancellation will take effect the day after the last day of the term of the current subscription.
+    </p>
+    <br>
+    <br>
+    <h3>Refunds</h3>
+    <p>
+    We generally do not provide refunds for in-app purchases. It is in our discretion to provide refunds.
+    </p>
 
     <br>
     <br>
@@ -374,7 +408,7 @@ We access user’s name, email and profile image to show their details in the ap
     <hr>
     <div class="container">
         <div class="text-center center-block">
-            <p class="txt-railway" style="color: white">Copyright © 2021 Doc Scanner, Made with ❤ by
+            <p class="txt-railway" style="color: white">Copyright © 2022 Doc Scanner, Made with ❤ by
                 <a style="color: white; font-size: 16px;" href="http://www.lufick.com/">Lufick</a>
             </p>
         </div>
