--- a/ios-tos.html
+++ b/ios-tos.html
@@ -91,7 +91,7 @@
 </head>
 <body>
 
-<div style="background-color: #607d8b">
+<div style="background-color: #162b35">
     <div class="container">
 
         <div class="text-left center-block">
@@ -107,12 +107,13 @@
 
     <p>By accessing this website we assume you accept these terms and conditions. Do not continue to use Doc Scanner app if you do not agree to take all of the terms and conditions stated on this page.
     </p>
-
+<br>
+    	<br>
     <h3>Acceptance of Terms and Conditions</h3>
 
 
     <p>
-      By using Our Products you accept these Terms and Conditions. If you do not accept these Terms and Conditions, you may not use Our Products and Services. Doc Scanner App reserves the right to amend these Terms and Conditions at any time without prior notice. The up-to-date version of these Terms and Conditions will be available on our official website. and any changes will come into effect immediately upon posting. By continuing to use our products you agree to amended terms and conditions.
+      By using Our Products you accept these Terms and Conditions. If you do not accept these Terms and Conditions, you may not use Our Products and Services. Doc Scanner App reserves the right to amend these Terms and Conditions at any time without prior notice. Any changes will come into effect immediately upon posting. By continuing to use our products you agree to amended terms and conditions.
     </p>
 
 	<br>
@@ -130,8 +131,8 @@
     Document Scanner is a freemium app which both provides basic features at free of cost and premium features with a subscription or prepaid plans.
     You can unlock premium or paid features by buying plans as per your need or choice.
 
-    Subscriptions are concluded for the term specified in your order. You can choose between 3 months, 12 months, and lifetime plans.
-    Prices are displayed in your local currency (if supported) and always include the applicable VAT (Value Added Tax) by the Play Store.
+    Subscriptions are concluded for the term specified in your order. You can choose between 3 months, 12 months plans.
+    Prices are displayed in your local currency (if supported) and always include the applicable VAT (Value Added Tax) by the App Store.
 
     We do not guarantee that the features of Document Scanner will always be free and reserves the right, at its sole discretion, to change the pricing.
     Downloading or using Document Scanner may incur additional costs for the internet connection according to the standard rates of your ISP. You shall bear all such costs.
@@ -190,7 +191,7 @@
 <br>
 <br>
 </div>
-<div style="background-color: #607d8b">
+<div style="background-color: #162b35">
     <hr>
     <div class="container">
         <div class="text-center center-block">
