--- a/ios-privacy-policy.html
+++ b/ios-privacy-policy.html
@@ -91,7 +91,7 @@
 </head>
 <body>
 
-<div style="background-color: #607d8b">
+<div style="background-color: #162b35">
     <div class="container">
 
         <div class="text-left center-block">
@@ -404,7 +404,7 @@ We access user’s name, email and profile image to show their details in the ap
 <br>
 <br>
 </div>
-<div style="background-color: #607d8b">
+<div style="background-color: #162b35">
     <hr>
     <div class="container">
         <div class="text-center center-block">
